--- a/app/templates/server/admin.add.twig
+++ b/app/templates/server/admin.add.twig
@@ -20,19 +20,19 @@
                     <input type="text" name="hostname" id="hostname" maxlength="24" required value="{{ form.hostname }}" class="text-input">
                 </li>
                 <li>
-                    <p>Environment</p>
-                    <ul class="check-list">
-                    {% for environment in environments %}
-                        {% set checked = '' %}
-                        {% if form.environment == environment.id %}
-                            {% set checked = ' checked="checked"' %}
-                        {% endif %}
+                    <label>Environment</label>
+                    <ul class="radio-grid--form">
+                        {% for environment in environments %}
+                            {% set checked = '' %}
+                            {% if form.environment == environment.id %}
+                                {% set checked = ' checked="checked"' %}
+                            {% endif %}
 
-                        <li>
-                            <input type="radio" name="environment" id="environment-{{ environment.id }}" value="{{ environment.id }}"{{ checked }}>
-                            <label for="environment-{{ environment.id }}">{{ environment.key }}</label>
-                        </li>
-                    {% endfor %}
+                            <li>
+                                <input id="environment-{{ environment.id }}" type="radio" name="environment" value="{{ environment.id }}"{{ checked }}>
+                                <label for="environment-{{ environment.id }}">{{ environment.key }}</label>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </li>
                 <li>
