Clean up deployment list on repo page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -54,6 +54,7 @@
 @import "partials/dash-box";
 @import "partials/pr";
 @import "partials/radio-grid";
+@import "partials/base/code";
 @import "partials/base/headings";
 @import "partials/base/forms";
 @import "partials/base/tables";
