--- a/app/templates/repository/repository.twig
+++ b/app/templates/repository/repository.twig
@@ -18,11 +18,7 @@
             </dt>
             <dd class="split--left__value">
                 <a href="{{ githubRepo(repository.githubUser, repository.githubRepo) }}">{{ repository.githubUser }}/{{ repository.githubRepo }}</a>
-                <span class="icon">
-                    <svg viewBox="0 0 32 32">
-                        <use xlink:href="#github"></use>
-                    </svg>
-                </span>
+                <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
             </dd>
             <dt class="split--left__title">
                 Notification E-mail
@@ -71,44 +67,53 @@
         <thead>
         <tr>
             <th>Environment</th>
-            <th colspan="3">Users</th>
+            <th>Users</th>
         </tr>
         </thead>
         <tbody>
         {% for pairs in permissions %}
             <tr>
                 <td>{{ pairs|first.environment.key|title }}</td>
-                {% for chunk in pairs|chunk(3) %}
                 <td>
                     <ul class="col-list">
-                        {% for pair in chunk %}
+                        {% for pair in pairs %}
                             <li><a href="{{ urlFor('user', {'id': pair.user.id}) }}">{{ pair.user.name }}</a></li>
                         {% endfor %}
                     </ul>
                 </td>
-                {% endfor %}
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <h3>Server Deployment Relationships:</h3>
-    {% if deployments %}
+    <h3>Server Deployments:</h3>
+    {% if deployment_count %}
         <table class="tablesaw tablesaw-stack" data-mode="stack">
             <thead>
                 <tr>
-                    <th>Hostname</th>
                     <th>Environment</th>
-                    <th>Path</th>
+                    <th>Deployments</th>
                 </tr>
             </thead>
             <tbody>
-            {% for deployment in deployments %}
-                <tr class="env-row-{{ deployment.server.environment.key }}">
-                    <td>{{ deployment.server.name }}</td>
-                    <td>{{ deployment.server.environment.key }}</td>
-                    <td>{{ deployment.path }}</td>
-                </tr>
+            {% for env, deployments in deployment_environments %}
+                {% if deployments %}
+                    <tr>
+                        <td>{{ env }}</td>
+                        <td>
+                            <ul class="list--bare">
+                                {% for deployment in deployments %}
+                                    <li>
+                                        <span class="fixed-size-label">
+                                            <a href="{{ urlFor('server', {id: deployment.server.id}) }}">{{ deployment.server.name }}</a>
+                                        </span>
+                                        <code>{{ deployment.path }}</code>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                    </tr>
+                {% endif %}
             {% endfor %}
             </tbody>
         </table>
