--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -51,11 +51,7 @@
         <li><b>Total Pushes:</b> {{ pushes }}</li>
         <li>
             <b>Github Page:</b> <a href="http://git/{{ user.handle }}">http://git/{{ user.handle }}</a>
-            <span class="icon">
-                <svg viewBox="0 0 32 32">
-                    <use xlink:href="#github"></use>
-                </svg>
-            </span>
+            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
         </li>
     </ul>
 
