--- a/app/templates/layout.html.twig
+++ b/app/templates/layout.html.twig
@@ -1,8 +1,9 @@
+{% set html_id_display = html_id ? ' id="' ~ html_id ~ '"' : '' %}
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"{{ html_id_display|raw }}> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"{{ html_id_display|raw }}> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"{{ html_id_display|raw }}> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"{{ html_id_display|raw }}> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         {% block head %}{% endblock %}
