--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -1,158 +1,70 @@
-{% extends 'layout.html.twig' %}
-
-{% import _self as base_macros %}
-
+{% set html_id_display = html_id ? ' id="' ~ html_id ~ '"' : '' %}
 {% set buster = applicationSha[:4] ?: 'dev' ~ 'now'|date('U') %}
 
-{% block head %}
-    <title>
-        {% if page_title %}{{ page_title }} - {% endif %}{{ applicationTitle }}
-    </title>
-    {% block icon %}
-        <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="57x57" href="/hal-57px.png"> <!-- for apple -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="72x72" href="/hal-72px.png"> <!-- for apple -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="114x114" href="/hal-114px.png"> <!-- for apple -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="144x144" href="/hal-144px.png"> <!-- for apple -->
-        <link type="image/png" rel="icon" href="/hal.png"> <!-- for the rest of the world -->
-    {% endblock %}
-    {% block meta %}
-        <meta name="format-detection" content="telephone=no">
-    {% endblock %}
-    {% block style %}
-        <link rel="stylesheet" href="/css/style.css?v={{ buster }}">
-    {% endblock %}
-{% endblock %}
-
-{% block body %}
-
-    {% include 'partials/icons.twig' %}
-
-    <!-- BEGIN HEADER -->
-    {% block header %}
-        <header role="banner">
-            <div class="hal">
-                <a href="/" class="wrapper">
-
-                    <h1 class="hal-label">
-                        <span class="hal-label__name">HAL</span>
-                        <span class="hal-label__version">9000</span>
-                    </h1>
-
-                    <div class="hal-eye circular">
-                        <div class="ring circular"></div>
-                        <div class="oculus circular">
-                            <div class="iris circular narrow"></div>
-                            <div class="iris circular wide"></div>
-                            <div class="highlight alpha"></div>
-                            <div class="highlight"></div>
-                            <div class="highlight beta"></div>
-                        </div>
-                    </div>
-
-                </a>
-            </div>
-            {% block navigation %}
-                <nav role="navigation">
-                    <ul class="nav--main mbn">
-                        {% if currentUser %}
-                            {{ base_macros.optionalNavlink('Dashboard', 'dashboard', 'dashboard', '-3') }}
-                            {{ base_macros.optionalNavlink('Queue', 'queue', 'in') }}
-
-                            {{ base_macros.optionalNavlink('Groups', 'groups', 'list') }}
-                            {{ base_macros.optionalNavlink('Repositories', 'repositories', 'repo', '-3') }}
-
-                            {{ base_macros.optionalNavlink('Servers', 'servers', 'server', '-4') }}
-                            {{ base_macros.optionalNavlink('Environments', 'environments', 'leaf', '-1') }}
-                            {{ base_macros.optionalNavlink('Users', 'users', 'users') }}
-                            {{ base_macros.optionalNavlink('Logs', 'logs', 'paper-roll') }}
-
-                            {% if isUserAdmin(currentUser) %}
-                                {{ base_macros.optionalNavlink('Admin', 'admin', 'watch') }}
-                            {% endif %}
-                            {{ base_macros.optionalNavlink('Help', 'help', 'question', '-6') }}
-
-                            <li>{{ base_macros.navlink('Settings', 'settings', 'settings') }}</li>
-                            <li>{{ base_macros.navlink('Logout', 'logout', 'sign-out') }}</li>
-
-                        {% else %}
-                            <li class="signed-out">{{ base_macros.navlink('Help', 'help', 'question', '-6') }}</li>
-                            <li class="signed-out">{{ base_macros.navlink('Login', 'login', 'sign-in') }}</li>
-                        {% endif %}
-                    </ul>
-                </nav>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"{{ html_id_display|raw }}> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"{{ html_id_display|raw }}> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"{{ html_id_display|raw }}> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"{{ html_id_display|raw }}> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        {% block head %}
+            <title>
+                {% if page_title %}{{ page_title }} - {% endif %}{{ applicationTitle }}
+            </title>
+            {% block icon %}
+                <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
+                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="57x57" href="/hal-57px.png"> <!-- for apple -->
+                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="72x72" href="/hal-72px.png"> <!-- for apple -->
+                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="114x114" href="/hal-114px.png"> <!-- for apple -->
+                <link type="image/png" rel="apple-touch-icon-precomposed" sizes="144x144" href="/hal-144px.png"> <!-- for apple -->
+                <link type="image/png" rel="icon" href="/hal.png"> <!-- for the rest of the world -->
             {% endblock %}
-        </header>
-    {% endblock %}
-    <!-- END HEADER -->
+            {% block meta %}
+                <meta name="format-detection" content="telephone=no">
+            {% endblock %}
+            {% block style %}
+                <link rel="stylesheet" href="/css/style.css?v={{ buster }}">
+            {% endblock %}
+        {% endblock %}
+    </head>
 
-    {% block main %}
-    <main role="main">
-        {% block flash %}
-            {% if session.flash(true) %}
-                <div class="alert-bar">
-                    {% for message in session.flash(false) %}
-                        <p>{{ message|raw }}</p>
-                    {% endfor %}
-                </div>
+    <body>
+        {% block body %}
+
+            {% include 'partials/layout.icons.twig' %}
+
+            {% block header %}
+                {% include 'partials/layout.header.twig' %}
+            {% endblock %}
+
+            {% block main %}
+            <main role="main">
+                {% include 'partials/layout.messages.twig' %}
+
+                {# main page content #}
+                {% block content %}{% endblock %}
+            </main>
+            {% endblock %}
+
+            {% block footer %}{% endblock %}
+
+        {% endblock %}
+
+        {% block script %}
+            <script data-main="/js/main.js?v={{ buster }}" src="/js/vendor/require-2.1.11.min.js"></script>
+            {% block pageScript %}{% endblock %}
+            {% if showAnalytics(currentUser) %}
+                <script>
+                    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+                    ga('create', 'UA-8298397-8', 'auto');
+                    ga('send', 'pageview');
+                </script>
             {% endif %}
         {% endblock %}
-        {% block messages %}
-            {# GLOBAL NOTICE #}
-            {% if notice %}
-                <div class="alert-bar">
-                    <p>{{ notice|raw }}</p>
-                </div>
-            {% endif %}
-            {# GLOBAL ERROR #}
-            {% if error %}
-                <div class="alert-bar">
-                    <p>{{ error|raw }}</p>
-                </div>
-            {% endif %}
-        {% endblock %}
-        <!-- BEGIN CONTENT -->
-        {% block content %}{% endblock %}
-        <!-- END CONTENT -->
-    </main>
-    {% endblock %}
-
-    <!-- BEGIN FOOTER -->
-    {% block footer %}{% endblock %}
-    <!-- END FOOTER -->
-
-{% endblock %}
-
-{% block script %}
-    <script data-main="/js/main.js?v={{ buster }}" src="/js/vendor/require-2.1.11.min.js"></script>
-    {% block pageScript %}{% endblock %}
-    {% if showAnalytics(currentUser) %}
-        <!-- BEGIN ANLYTICS -->
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-8298397-8', 'auto');
-            ga('send', 'pageview');
-        </script>
-        <!-- END ANLYTICS -->
-    {% endif %}
-{% endblock %}
-
-{% macro navlink(title, key, icon, customWidth) %}
-    <a href="{{ urlFor(key) }}" title="{{ title }}">
-        <svg class="icon" viewBox="{{ customWidth|default('0') }} 0 32 32">
-            <use xlink:href="#{{ icon }}"></use>
-        </svg>
-        {{ title }}
-    </a>
-{% endmacro %}
-
-{% macro optionalNavlink(title, key, icon, customWidth) %}
-    {% import _self as base_macros %}
-    {% if isNavOn(key) %}
-        <li>{{ base_macros.navlink(title, key, icon, customWidth) }}</li>
-    {% endif %}
-{% endmacro %}
+    </body>
+</html>
