--- a/app/templates/help/api.twig
+++ b/app/templates/help/api.twig
@@ -20,7 +20,7 @@
     <h4>Index</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.index') }}">{{ uriFor('api.index') }}</a></li>
+        <li><a href="{{ urlFor('api.index') }}">{{ urlFor('api.index') }}</a></li>
     </ul>
 
 
@@ -28,62 +28,62 @@
     <h4>Environments</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.environments') }}">{{ uriFor('api.environments') }}</a></li>
-        <li><a href="{{ urlFor('api.environment', {id: 'id'}) }}">{{ uriFor('api.environment', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.environments') }}">{{ urlFor('api.environments') }}</a></li>
+        <li><a href="{{ urlFor('api.environment', {id: 'id'}) }}">{{ urlFor('api.environment', {id: ':id'}) }}</a></li>
     </ul>
 
     <h4>Servers</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.servers') }}">{{ uriFor('api.servers') }}</a></li>
-        <li><a href="{{ urlFor('api.server', {id: ':id'}) }}">{{ uriFor('api.server', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.servers') }}">{{ urlFor('api.servers') }}</a></li>
+        <li><a href="{{ urlFor('api.server', {id: ':id'}) }}">{{ urlFor('api.server', {id: ':id'}) }}</a></li>
     </ul>
 
     <h4>Groups</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.groups') }}">{{ uriFor('api.groups') }}</a></li>
-        <li><a href="{{ urlFor('api.group', {id: ':id'}) }}">{{ uriFor('api.group', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.groups') }}">{{ urlFor('api.groups') }}</a></li>
+        <li><a href="{{ urlFor('api.group', {id: ':id'}) }}">{{ urlFor('api.group', {id: ':id'}) }}</a></li>
     </ul>
 
     <h4>Users</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.users') }}">{{ uriFor('api.users') }}</a></li>
-        <li><a href="{{ urlFor('api.user', {id: ':id'}) }}">{{ uriFor('api.user', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.users') }}">{{ urlFor('api.users') }}</a></li>
+        <li><a href="{{ urlFor('api.user', {id: ':id'}) }}">{{ urlFor('api.user', {id: ':id'}) }}</a></li>
     </ul>
 
     <h4>Repositories</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.repositories') }}">{{ uriFor('api.repositories') }}</a></li>
-        <li><a href="{{ urlFor('api.repository', {id: ':id'}) }}">{{ uriFor('api.repository', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.repository.tags', {id: ':id'}) }}">{{ uriFor('api.repository.tags', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.repository.branches', {id: ':id'}) }}">{{ uriFor('api.repository.branches', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.repository.pullrequests', {id: ':id'}) }}">{{ uriFor('api.repository.pullrequests', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.repositories') }}">{{ urlFor('api.repositories') }}</a></li>
+        <li><a href="{{ urlFor('api.repository', {id: ':id'}) }}">{{ urlFor('api.repository', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.repository.tags', {id: ':id'}) }}">{{ urlFor('api.repository.tags', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.repository.branches', {id: ':id'}) }}">{{ urlFor('api.repository.branches', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.repository.pullrequests', {id: ':id'}) }}">{{ urlFor('api.repository.pullrequests', {id: ':id'}) }}</a></li>
     </ul>
 
     <h4>Deployments</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.deployments', {id: ':id'}) }}">{{ uriFor('api.deployments', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.deployment', {id: ':id'}) }}">{{ uriFor('api.deployment', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.deployments', {id: ':id'}) }}">{{ urlFor('api.deployments', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.deployment', {id: ':id'}) }}">{{ urlFor('api.deployment', {id: ':id'}) }}</a></li>
     </ul>
 
     <h4>Builds</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.builds', {id: ':id'}) }}">{{ uriFor('api.builds', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.build', {id: ':id'}) }}">{{ uriFor('api.build', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.build.log', {id: ':id'}) }}">{{ uriFor('api.build.log', {id: ':id'}) }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.builds', {id: ':id'}) }}">{{ urlFor('api.builds', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.build', {id: ':id'}) }}">{{ urlFor('api.build', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.build.log', {id: ':id'}) }}">{{ urlFor('api.build.log', {id: ':id'}) }}</a> [NYI]</li>
     </ul>
 
     <h4>Pushes</h4>
 
     <ul>
-        <li><a href="{{ urlFor('api.pushes', {id: ':id'}) }}">{{ uriFor('api.pushes', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.push', {id: 'id'}) }}">{{ uriFor('api.push', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.push.log', {id: ':id'}) }}">{{ uriFor('api.push.log', {id: ':id'}) }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.pushes', {id: ':id'}) }}">{{ urlFor('api.pushes', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.push', {id: 'id'}) }}">{{ urlFor('api.push', {id: ':id'}) }}</a></li>
+        <li><a href="{{ urlFor('api.push.log', {id: ':id'}) }}">{{ urlFor('api.push.log', {id: ':id'}) }}</a> [NYI]</li>
     </ul>
 
     <h3>Protected Endpoints</h3>
