--- a/app/templates/logs.twig
+++ b/app/templates/logs.twig
@@ -26,7 +26,7 @@
         <tbody>
         {% for log in logs %}
             <tr>
-                <td>{{ log.recorded|timepoint }}</td>
+                <td>{{ log.recorded|timepoint('M j, Y g:i A') }}</td>
                 <td><a href="{{ urlFor('user', {'id': log.user.id}) }}">{{ log.user.name }}</a></td>
                 <td><b>{{ log.action }}</b></td>
                 <td>{{ log.entity }}</td>
