--- a/app/templates/partials/layout.header.twig
+++ b/app/templates/partials/layout.header.twig
@@ -35,6 +35,8 @@
                     {{ nav_macros.optionalNavlink('Servers', 'servers', 'server', '-4') }}
                     {{ nav_macros.optionalNavlink('Environments', 'environments', 'leaf', '-1') }}
                     {{ nav_macros.optionalNavlink('Users', 'users', 'users') }}
+
+                    {# @todo FIX ME, route with required params {page: 1} #}
                     {{ nav_macros.optionalNavlink('Logs', 'logs', 'paper-roll') }}
 
                     {% if isUserAdmin(currentUser) %}
